Massilani et al 2020 included

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1848,3 +1848,28 @@ The first message delivered …
 	pages = {10520--10522},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/CRRK2YKH/Hublin - 2017 - The last Neanderthal.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/7ZJ5URXF/10520.html:text/html}
 }
+
+
+@article{massilani_denisovan_2020,
+	title = {Denisovan ancestry and population history of early {East} {Asians}},
+	volume = {370},
+	copyright = {Copyright © 2020 The Authors, some rights reserved; exclusive licensee American Association for the Advancement of Science. No claim to original U.S. Government Works. https://www.sciencemag.org/about/science-licenses-journal-article-reuseThis is an article distributed under the terms of the Science Journals Default License.},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/370/6516/579},
+	doi = {10.1126/science.abc1166},
+	abstract = {DNA analyses of an early East Asian
+Ancient, anatomically modern humans interbred with the archaic hominins Neanderthals and Denisovans. However, the extent of this interbreeding and how it affects modern populations is not well understood. Massilani et al. generated genome-wide data from a 34,000-year-old female individual from the Salkhit Valley in eastern Mongolia and conducted a detailed modeling of her ancestry with regard to other Pleistocene human genomes. They found evidence for Denisovan ancestry in ancient human genomes from at least 6000 years before the Salkhit individual lived and determined that the Denisovan contribution differed from that of another ancient Asian individual, as well as from the ancient Denisovan contribution to extant Australasians. This reference point helps us to understand the early history of our species in Eurasia, especially Eastern Eurasia, for which genomic evidence remains scarce.
+Science, this issue p. 579
+A human skull from 34,000 years ago found in Mongolia elucidates the genetics of early East Asians and Denisovan admixture.
+A human skull from 34,000 years ago found in Mongolia elucidates the genetics of early East Asians and Denisovan admixture.},
+	language = {en},
+	number = {6516},
+	urldate = {2021-02-07},
+	journal = {Science},
+	author = {Massilani, Diyendo and Skov, Laurits and Hajdinjak, Mateja and Gunchinsuren, Byambaa and Tseveendorj, Damdinsuren and Yi, Seonbok and Lee, Jungeun and Nagel, Sarah and Nickel, Birgit and Devièse, Thibaut and Higham, Tom and Meyer, Matthias and Kelso, Janet and Peter, Benjamin M. and Pääbo, Svante},
+	month = oct,
+	year = {2020},
+	pmid = {33122380},
+	pages = {579--583},
+	file = {Snapshot:/home/leonardo_iasi/Zotero/storage/TJ7359W8/579.html:text/html;Submitted Version:/home/leonardo_iasi/Zotero/storage/HWI3JHC4/Massilani et al. - 2020 - Denisovan ancestry and population history of early.pdf:application/pdf}
+}
