--- a/Cut_outs_from_shortening_the_manuscript.tex
+++ b/Cut_outs_from_shortening_the_manuscript.tex
@@ -1,5 +1,17 @@
 
 
+
+
+\title{An extended admixture pulse model reveals the limits to the dating of Human-Neandertal introgression}
+
+\author[1,2]{Iasi, Leonardo N M}
+\author[1,3]{Peter, Benjamin M}
+
+
+\affil[1]{Department of Evloutionary Genetics, \\ 
+        Max Planck Institute for Evolutionary Anthropology, Leipzig, Germany}
+\affil[2]{leonardo\_iasi@eva.mpg.de}
+\affil[3]{benjamin\_peter@eva.mpg.de}
 \begin{document}
 
 Over short distances, ALD may be confounded by short-range LD caused by the inheritance of chromosomal segments from an ancestral population, or LD caused by bottlenecks and genetic drift after the split from the parental population \citep{moorjani_history_2011}.
@@ -27,5 +39,23 @@ Recently, \cite{hajdinjak_early_2021} showed that segments from a recent Neander
 
 \cite{ralph_geography_2013} used the distribution of shared identical by descent (IBD)  segments between pairs of individuals to infer the number and age of genetic common ancestors. By modeling over all ancestors and ages they fit more complex migration patterns. However, they found that a large set of migration patterns fit the IBD distribution equally well. To cope with this they introduced a regularization scheme to their likelihood function by adding a penalization term \citep{ralph_geography_2013}.
 
+\subsection{Evaluation of the simulations}
 
+\subsection{The effect of continuous admixture on the admixture time estimates}\label{the effect of continuous admixture on the admixture time estimates}
+
+The total amount of gene flow $m$ from Neandertals into non-Africans
+in the two models is equal, and we match the two models such that the mean admixture times are equal, with the only difference being the duration of gene flow $t_d$. All comparisons are based on the LES ascertainment scheme and $d_0 =  0.05 cM$. 
+
+
+
+\subsubsection{Recombination rate}
+ 
+The inference of admixture time depends on accurately estimating the recombination clock. Since there are not always fine-scale population specific recombination maps available, we examine three ways of assigning the genetic distance with various degrees of uncertainty. When simulating data under a recombination map, we either: use the mean recombination rate from the
+respective map to calculate the genetic distance from the physical
+distance for each SNP (assuming recombination to be constant with the average recombination rate of the respective map), use another genetic map to assign distances
+(e.g.~AAMap  for the \texttt{msprime} simulation and HapMap  to assign genetic distances, emulating uncertainties in the recombination map) or use the same map for simulation and assigning
+genetic distances (population specific map).
+
+\subsubsection{Parameter estimation under the extended pulse model}
+Inference is performed using the standard set of parameters defined above. In addition, we also  evaluate the effect of recombination rate variation. For this purpose, we simulate under both a constant recombination rate and using the empirical HapMap genetic map. Inference is performed using either  a constant recombination rate, using the HapMap (i.e. exact same map as in the simulations) or the AAMap recombination maps (to mimic uncertainty and population differences in estimated recombination maps).
 \end{document}
